crates/den-core/tests/snapshots/vault__tasks_for_one_project_include_its_notes.snap
---
source: crates/den-core/tests/vault.rs
expression: "vault.tasks_view(&Scope::Project(\"website\".into()), TODAY)"
---
doing:
  - path: projects/website.md
    line: 16
    raw: "- [/] Draft the homepage story #writing @due(2026-09-28)"
    text: "Draft the homepage story #writing @due(2026-09-28)"
    title: Draft the homepage story
    state: doing
    tags:
      - writing
    due: 2026-09-28
    done: ~
    section: Next actions
    project:
      name: website
      title: Personal website
    source: Personal website
groups:
  - project:
      name: website
      title: Personal website
    label: Personal website
    tasks:
      - path: projects/website.md
        line: 17
        raw: "- [ ] Choose three projects to feature #writing"
        text: "Choose three projects to feature #writing"
        title: Choose three projects to feature
        state: open
        tags:
          - writing
        due: ~
        done: ~
        section: Next actions
        project:
          name: website
          title: Personal website
        source: Personal website
      - path: projects/website.md
        line: 18
        raw: "- [ ] Gather a few visual references #design @due(2026-09-20)"
        text: "Gather a few visual references #design @due(2026-09-20)"
        title: Gather a few visual references
        state: open
        tags:
          - design
        due: 2026-09-20
        done: ~
        section: Next actions
        project:
          name: website
          title: Personal website
        source: Personal website
      - path: notes/homepage-story.md
        line: 8
        raw: "- [ ] Ask two friends to read the draft"
        text: Ask two friends to read the draft
        title: Ask two friends to read the draft
        state: open
        tags: []
        due: ~
        done: ~
        section: ~
        project:
          name: website
          title: Personal website
        source: Homepage story
closed:
  - path: projects/website.md
    line: 21
    raw: "- [x] Pick a font @done(2026-09-22)"
    text: Pick a font @done(2026-09-22)
    title: Pick a font
    state: done
    tags: []
    due: ~
    done: 2026-09-22
    section: Next actions
    project:
      name: website
      title: Personal website
    source: Personal website
open: 4
locked: 0
